# binary_scene

./: CMakeLists.txt  CMakeSettings.json  animation.hpp  asset.hpp  assign_unique_index.cpp  assign_unique_index.hpp  binary_scene.cpp  end_of_animation.hpp  face_name.hpp  get_text_id.cpp  get_text_id.hpp  id.hpp  is_match.cpp  is_match.hpp  language.hpp  languages.hpp  layout_tag.hpp  options.hpp  program.cpp  program.hpp  scene.hpp  scenes.hpp  sound.hpp  sprite.hpp  string.hpp  strings.hpp  text_maker.cpp  text_maker.hpp  texture.hpp
option/: behavior.hpp  image_format.hpp
